# handy-utils

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg  usage.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  publish.yml  release.yml  tests.yml
docs/: api.md  installation.md
handy_utils/: __init__.py  cli.py  configuration.py  convert_to_confluence.py  convert_to_markdown.py  generate_commit.py  html_to_asf.py  obsidian_sync.py
handy_utils/convert_to_confluence/: __init__.py  convert_to_confluence.py  html_to_asf.py
handy_utils/convert_to_confluence/templates/atlassian-confluence/: conf.json  index.html.j2
handy_utils/generate_commit/: __init__.py  generate_commit.py  prompts.py
handy_utils/researcher/: deep_researcher.py  prompts.py
handy_utils/templates/: atlassian_template.tpl
handy_utils/templates/atlassian-confluence/: index.html.j2
handy_utils/utils/: ai_gateway.py  anthropic_provider.py  unified_provider.py
notebooks/: nb2conf.ipynb  rough.ipynb
tests/: __init__.py  test_handy_utils.py
