[tool]
[tool.poetry]
name = "handy-utils-agni"
version = "0.1.0"
homepage = "https://github.com/vempaliakhil96/handy-utils"
description = "Handy Utils for daily use"
authors = ["Akhil Vempali <vempaliakhil96@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
]
packages = [
    { include = "handy_utils" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
langchain = "*"
langchain-openai = "*"
python = ">=3.10,<4.0"
click = "*"
pyyaml = "*"
black  = "*"
isort  = "*"
flake8  = "*"
flake8-docstrings = "*"
pytest  = "*"
pytest-cov  = "*"
tox  = "*"
virtualenv  = "*"
pip  = "*"
twine  = "*"
pre-commit = "*"
toml = "*"
bump2version = "*"
mkdocs-material-extensions = "*"
mkdocs = "*"
pymdown-extensions = "*"
mkdocstrings-python = "*"
mkdocs-autorefs = "*"
materialx = "*"
mkdocs-material = "*"
markdown-include = "*"
mkdocs-include-markdown-plugin = "*"


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [ "mkdocs", "mkdocs-material-extensions", "mkdocs-material", "mkdocstrings-python", "mkdocs-autorefs", "materialx"]

[tool.poetry.scripts]
handy-utils = 'handy_utils.cli:main'

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
isolated_build = true