[project]
name = "handy-utils-agni"
version = "0.2.0"
description = "Handy Utils for daily use"
authors = [{ name = "Akhil Vempali", email = "vempaliakhil96@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]

dependencies = [
    "langchain",
    "langchain-openai",
    "click",
    "pyyaml",
    "pymdown-extensions",
    "markdown-include",
    "mkdocs-include-markdown-plugin",
    "nbconvert>=7.16.6,<8",
    "pandoc~=2.4",
    "nbformat>=5.10.4,<6",
    "atlassian-python-api>=3.41.19,<4",
    "ruff>=0.9.4,<0.10",
    "types-pyyaml>=6.0.12.20250402",
]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "types-PyYAML",
]
dev = [
    "tox",
    "pre-commit",
    "virtualenv",
    "pip",
    "twine",
    "toml",
    "bump2version",
]
doc = [
    "mkdocs",
    "mkdocs-material-extensions",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "materialx",
]

[project.urls]
Homepage = "https://github.com/vempaliakhil96/handy-utils"

[project.scripts]
handy-utils = "handy_utils.cli:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "ipython>=8.31.0,<9",
    "ipykernel>=6.29.5,<7",
    "isort>=5.13.2",
]

[tool.hatch.build.targets.sdist]
include = [
    "handy_utils",
    "tests",
]

[tool.hatch.build.targets.wheel]
include = ["handy_utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.tox]
isolated_build = true

[tool.ruff]
line-length = 120
ignore = [ "E701", "E702"]
