[project]
name = "handy-utils"
version = "0.3.0"
description = "Handy Utils for daily use"
authors = [{ name = "Akhil Vempali", email = "vempaliakhil96@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]

dependencies = [
    "click",
    "pyyaml",
    "pymdown-extensions",
    "markdown-include",
    "mkdocs-include-markdown-plugin",
    "nbconvert>=7.16.6,<8",
    "pandoc~=2.4",
    "nbformat>=5.10.4,<6",
    "atlassian-python-api>=3.41.19,<4",
    "ruff>=0.9.4,<0.10",
    "types-pyyaml>=6.0.12.20250402",
    "pydantic-ai[openai]>=0.3.5",
    "diskcache>=5.6.3",
    "logfire>=3.22.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "types-PyYAML",
]
dev = [
    "tox",
    "pre-commit",
    "virtualenv",
    "pip",
    "twine",
    "toml",
    "bump2version",
]
doc = [
    "mkdocs",
    "mkdocs-material-extensions",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "materialx",
]

[project.urls]
Homepage = "https://github.com/vempaliakhil96/handy-utils"

[project.scripts]
handy-utils = "handy_utils.cli:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "ipython>=8.31.0,<9",
    "ipykernel>=6.29.5,<7",
    "isort>=5.13.2",
    "pre-commit>=4.2.0",
    "ruff>=0.9.10",
]

[tool.hatch.build.targets.sdist]
include = [
    "handy_utils",
    "tests",
]

[tool.hatch.build.targets.wheel]
include = ["handy_utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [ "E701", "E702"]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
